Alt text and contrast issue fix.

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ p {
 }
 
 a, a:hover {
-    color: #B23922;
+    color: #6C2214;
 }
 
 footer a, footer a:hover {
